// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Cart renders correctly if there are NO items in cart 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c3 {
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  line-height: 1.4;
  margin: 0;
  margin-bottom: 1rem;
  color: #222222;
  color: #222222;
  padding-bottom: 3rem;
}

.c3:last-child {
  margin-bottom: 0;
}

<article
  className="c0"
>
  <section
    className="c1"
  >
    <h1
      className="c2"
    >
      Cart
    </h1>
    <p
      className="c3"
    >
      There are no items in your cart.
    </p>
  </section>
</article>
`;

exports[`COMPONENT - Cart renders correctly if there are some items in cart 1`] = `
Array [
  <InfoBanner>
    You have received 
    <strong>
      free shipping
    </strong>
    !
  </InfoBanner>,
  .c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c3 {
  width: 100%;
  border: 2px solid #e0151d;
  color: #222222;
  background-color: #fadcdd;
  font-size: 1.8rem;
  font-weight: 700;
  padding: 1rem;
}

<article
    className="c0"
  >
    <section
      className="c1"
    >
      <h1
        className="c2"
      >
        Cart
      </h1>
      <p
        className="c3"
        role="alert"
      >
        Oops, something went wrong.
      </p>
    </section>
    <OrderSummary />
    <NextStep
      label="Checkout"
      to="/checkout/delivery"
    />
  </article>,
]
`;
